--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
         <div style="text-align: center" class="navblock">
             <span class="navlink">MUSIC</span>
-            <img src="images/lobster_icon186.png" class="navicon" alt="lobster icon">
+            <img src="images/lobster_ani.png" class="navicon" alt="lobster icon">
             <span class="navlink">ABOUT</span>
-            <img src="images/moon_icon186.png" class="navicon" alt="moon icon">
+            <img src="images/starburst_ani.png" class="navicon" alt="starburst icon">
             <span class="navlink">TOUR</span>
-            <img src="images/lobster_icon186.png" class="navicon" alt="lobster icon">
+            <img src="images/wig_ani.png" class="navicon" alt="wig icon">
             <span class="navlink">MEDIA</span>
-            <img src="images/moon_icon186.png" class="navicon" alt="moon icon">
+            <img src="images/moon_ani.png" class="navicon" alt="moon icon">
             <span class="navlink">SHOP</span>
         </div>
         <div style="text-align: center" class="splashimage">
