updated social footer

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <img src="images/B52s_portrait.png" alt="band portrait">
         </div>
         <div style="text-align: center" class="socialfooter">
-            <span class="socialicon"><a href="https://www.facebook.com/theb52s">FACEBOOK</a></span>
-            <span class="socialicon"><a href="http://instagram.com/theb52sband">INSTAGRAM</a></span>
-            <span class="socialicon"><a href="https://twitter.com/TheB52s">TWITTER</a></span>
+            <span class="socialicon"><a href="https://www.facebook.com/theb52s"><img src="images/fb_icon.png" alt="B52s Facebook"></a></span>
+            <span class="socialicon"><a href="http://instagram.com/theb52sband"><img src="images/ig_icon.png" alt="B52s Instagram"></a></span>
+            <span class="socialicon"><a href="https://twitter.com/TheB52s"><img src="images/tw_icon.png" alt="B52s Twitter"></a></span>
         </div>
     </body>
     </html>
