--- a/index.html
+++ b/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
     <html>
+    
     <head>
-        <title>The B52s</title>
+        <title>The B-52's</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="./index.css" />
     </head>
+    
     <body>
 
-        <div style="text-align: center" class="navblock">
-            <span class="navlink">MUSIC</span>
-            <img src="images/lobster_ani.png" class="navicon" alt="lobster icon">
-            <span class="navlink">ABOUT</span>
-            <img src="images/starburst_ani.png" class="navicon" alt="starburst icon">
-            <span class="navlink">TOUR</span>
-            <img src="images/wig_ani.png" class="navicon" alt="wig icon">
-            <span class="navlink">MEDIA</span>
-            <img src="images/moon_ani.png" class="navicon" alt="moon icon">
-            <span class="navlink">SHOP</span>
-        </div>
+        <nav>
+            <div class="container-fluid">
+                <ul class="nav nav-pills justify-content-center ahnavblock">
+                    <li class="nav-item"><a class="ahnavlink" href="#">MUSIC</a></li>
+                    <li class="nav-item"></li><img src="images/lobster_ani.png" class="ahnavicon" alt="lobster icon">
+                    <li class="nav-item"><a class="ahnavlink" href="#">ABOUT</a></li>
+                    <li class="nav-item"></li><img src="images/starburst_ani.png" class="ahnavicon" alt="starburst icon">     
+                    <li class="nav-item"><a class="ahnavlink" href="#">TOUR</a></li>
+                    <li class="nav-item"><img src="images/wig_ani.png" class="ahnavicon" alt="wig icon">
+                    <li class="nav-item"><a class="ahnavlink" href="#">GALLERY</a></li>
+                    <li class="nav-item"></li><img src="images/moon_ani.png" class="ahnavicon" alt="moon icon">
+                    <li class="nav-item"><a class="ahnavlink" href="#">SHOP</a></li>                   
+                </ul>
+            </div>
+        </nav>
+
         <div style="text-align: center" class="splashimage">
             <img src="images/B52s_portrait.png" alt="band portrait">
         </div>
-        <div style="text-align: center" class="socialfooter">
-            <span class="socialicon"><a href="https://www.facebook.com/theb52s"><img src="images/fb_icon.png" alt="B52s Facebook"></a></span>
-            <span class="socialicon"><a href="http://instagram.com/theb52sband"><img src="images/ig_icon.png" alt="B52s Instagram"></a></span>
-            <span class="socialicon"><a href="https://twitter.com/TheB52s"><img src="images/tw_icon.png" alt="B52s Twitter"></a></span>
-        </div>
+
+        <footer class="page-footer">
+            <div class="container-fluid pt-4 pb-3">
+                <ul class="list-unstyled list-inline text-center">
+                    <li class="list-inline-item">
+                        <a href="https://www.facebook.com/theb52s"><img src="images/fb_icon.png" alt="The B-52's Facebook"></a> 
+                    </li>
+                    <li class="list-inline-item px-4">
+                        <a href="http://instagram.com/theb52sband"><img src="images/ig_icon.png" alt="The B-52's Instagram"></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://twitter.com/TheB52s"><img src="images/tw_icon.png" alt="The B-52's Twitter"></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-copyright text-center">
+                <a href="#"><img src="images/B52s_smalllogo.png" alt="logo to splash page"></a>
+            </div>
+            <div class="footer-copyright text-center pt-1 pb-3 ahcaptiontext">
+                © 2019 
+            </div>
+        </footer>
+
     </body>
+   
     </html>
