changes to splash image

--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
         <nav>
             <div class="container-fluid">
                 <ul class="nav nav-pills justify-content-center ahnavblock">
-                    <li class="nav-item"><a class="ahnavlink" href="#">MUSIC</a></li>
-                    <li class="nav-item"></li><img src="images/lobster_ani.png" class="ahnavicon" alt="lobster icon">
-                    <li class="nav-item"><a class="ahnavlink" href="#">ABOUT</a></li>
-                    <li class="nav-item"></li><img src="images/starburst_ani.png" class="ahnavicon" alt="starburst icon">     
-                    <li class="nav-item"><a class="ahnavlink" href="#">TOUR</a></li>
-                    <li class="nav-item"><img src="images/wig_ani.png" class="ahnavicon" alt="wig icon">
-                    <li class="nav-item"><a class="ahnavlink" href="#">GALLERY</a></li>
-                    <li class="nav-item"></li><img src="images/moon_ani.png" class="ahnavicon" alt="moon icon">
-                    <li class="nav-item"><a class="ahnavlink" href="#">SHOP</a></li>                   
+                    <li class="nav-item"><a class="nav-link ahnavlink" href="https://www.theb52s.com/music-1">MUSIC</a></li>
+                    <li class="nav-item"><img src="images/lobster_ani.png" class="ahnavicon" alt="lobster icon"></li>
+                    <li class="nav-item"><a class="nav-link ahnavlink" href="https://www.theb52s.com/bio">ABOUT</a></li>
+                    <li class="nav-item"><img src="images/starburst_ani.png" class="ahnavicon" alt="starburst icon"></li>    
+                    <li class="nav-item"><a class="nav-link ahnavlink" href="https://www.theb52s.com/tour">TOUR</a></li>
+                    <li class="nav-item"><img src="images/wig_ani.png" class="ahnavicon" alt="wig icon"></li>
+                    <li class="nav-item"><a class="nav-link ahnavlink" href="https://www.theb52s.com/gallery">GALLERY</a></li>
+                    <li class="nav-item"><img src="images/moon_ani.png" class="ahnavicon" alt="moon icon"></li>
+                    <li class="nav-item"><a class="nav-link ahnavlink" href="https://theb52s.manheadmerch.com/">SHOP</a></li>                   
                 </ul>
             </div>
         </nav>
 
-        <div style="text-align: center" class="splashimage">
+        <div class="text-center">
             <img src="images/B52s_portrait.png" alt="band portrait">
         </div>
 
         <footer class="page-footer">
-            <div class="container-fluid pt-4 pb-3">
-                <ul class="list-unstyled list-inline text-center">
-                    <li class="list-inline-item">
+            <div class="container-fluid pt-3">
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item px-2">
                         <a href="https://www.facebook.com/theb52s"><img src="images/fb_icon.png" alt="The B-52's Facebook"></a> 
                     </li>
-                    <li class="list-inline-item px-4">
+                    <li class="list-inline-item px-2">
                         <a href="http://instagram.com/theb52sband"><img src="images/ig_icon.png" alt="The B-52's Instagram"></a>
                     </li>
-                    <li class="list-inline-item">
+                    <li class="list-inline-item px-2">
                         <a href="https://twitter.com/TheB52s"><img src="images/tw_icon.png" alt="The B-52's Twitter"></a>
                     </li>
                 </ul>
