--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <nav>
             <div class="container-fluid">
                 <ul class="nav nav-pills justify-content-center ahnavblock">
-                    <li class="nav-item"><a class="nav-link ahnavlink" href="https://www.theb52s.com/music-1">MUSIC</a></li>
+                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="./music.html">MUSIC</a></li>
                     <li class="nav-item"><img src="images/lobster_ani.png" class="ahnavicon" alt="lobster icon"></li>
-                    <li class="nav-item"><a class="nav-link ahnavlink" href="https://www.theb52s.com/bio">ABOUT</a></li>
+                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="https://www.theb52s.com/bio">ABOUT</a></li>
                     <li class="nav-item"><img src="images/starburst_ani.png" class="ahnavicon" alt="starburst icon"></li>    
-                    <li class="nav-item"><a class="nav-link ahnavlink" href="https://www.theb52s.com/tour">TOUR</a></li>
+                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="https://www.theb52s.com/tour">TOUR</a></li>
                     <li class="nav-item"><img src="images/wig_ani.png" class="ahnavicon" alt="wig icon"></li>
-                    <li class="nav-item"><a class="nav-link ahnavlink" href="https://www.theb52s.com/gallery">GALLERY</a></li>
+                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="https://www.theb52s.com/gallery">GALLERY</a></li>
                     <li class="nav-item"><img src="images/moon_ani.png" class="ahnavicon" alt="moon icon"></li>
-                    <li class="nav-item"><a class="nav-link ahnavlink" href="https://theb52s.manheadmerch.com/">SHOP</a></li>                   
+                    <li class="nav-item pt-2"><a class="nav-link ahnavlink" href="https://theb52s.manheadmerch.com/">SHOP</a></li>                   
                 </ul>
             </div>
         </nav>
@@ -45,7 +45,7 @@
                 </ul>
             </div>
             <div class="footer-copyright text-center">
-                <a href="#"><img src="images/B52s_smalllogo.png" alt="logo to splash page"></a>
+                <a href="./index.html"><img src="images/B52s_smalllogo.png" alt="logo to splash page"></a>
             </div>
             <div class="footer-copyright text-center pt-1 pb-3 ahcaptiontext">
                 © 2019 
