album titles and descriptions

--- a/music.html
+++ b/music.html
@@ -24,7 +24,7 @@
 
         <div class="container pt-2 pb-5">
                 <h1 class="ahjumbotext">The B-52's Discography</h1>
-                <p class="ahbodytext">Forty years and twenty million albums into their career, the B-52's remain one of the most beloved and enduring bands. From groundbreaking songs like “Rock Lobster,” “Dance This Mess Around” and “Private Idaho“ to chart-topping hits like “Love Shack” and “Roam” and “Deadbeat Club”, their unforgettable tunes start a dance party every time the music begins.</p>
+                <p class="ahbodytext">Forty years and twenty million albums into their career, the B-52's remain one of the most beloved and enduring bands. From groundbreaking songs like “Rock Lobster,” “Dance This Mess Around” and “Private Idaho“ to chart-topping hits like “Love Shack,” “Roam” and “Deadbeat Club”, their unforgettable tunes start a dance party every time the music begins.</p>
               </div>
 
         <div class="container">
@@ -32,17 +32,17 @@
             <div class="card m-3" style="width: 18rem;">
                 <img class="card-img-top" src="images/album_wp800.jpg" alt="Wild Planet album">
                     <div class="card-body">
-                        <h3 class="ahheader">Wild Planet</h3>
-                        <p class="ahbodytext">The certified gold second studio album includes concert staples such as Private Idaho.</p>
+                        <h3 class="ahheader">The B-52's</h3>
+                        <p class="ahbodytext">Platinum debut with some of the band's best known songs such as Rock Lobster and Planet Claire</p>
                         <a href="#" class="btn btn-primary">Listen</a>
-                        <p class="ahcardfooter">1980</p>
+                        <p class="ahcardfooter">1979</p>
                     </div>
             </div>
             <div class="card m-3" style="width: 18rem;">
                 <img class="card-img-top" src="images/album_wp800.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h3 class="ahheader">Card title</h3>
-                        <p class="ahbodytext">Build on the card title and make up the bulk of the card's content.</p>
+                        <h3 class="ahheader">Wild Planet</h3>
+                        <p class="ahbodytext">Certified gold second studio album includes concert staples such as Private Idaho</p>
                         <a href="#" class="btn btn-primary">Listen</a>
                         <p class="ahcardfooter">1980</p>
                     </div>
@@ -50,118 +50,118 @@
             <div class="card m-3" style="width: 18rem;">
                 <img class="card-img-top" src="images/album_wp800.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h3 class="ahheader">Card title</h5>
-                        <p class="ahbodytext">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h3 class="ahheader">Party Mix!</h3>
+                        <p class="ahbodytext">Compilation of six songs from the first two albums remixed into two long tracks</p>
                         <a href="#" class="btn btn-primary">Listen</a>
-                        <p class="ahcardfooter">1980</p>
+                        <p class="ahcardfooter">1981</p>
                     </div>
             </div>          
             <div class="card m-3" style="width: 18rem;">
                     <img class="card-img-top" src="images/album_wp800.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <h3 class="ahheader">Card title</h5>
-                            <p class="ahbodytext">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <h3 class="ahheader">Whammy!</h3>
+                            <p class="ahbodytext">Third studio album features drum machines, synths, and vocals from all five members</p>
                             <a href="#" class="btn btn-primary">Listen</a>
-                            <p class="ahcardfooter">1980</p>
+                            <p class="ahcardfooter">1983</p>
                         </div>
                 </div>                  
             <div class="card m-3" style="width: 18rem;">
                 <img class="card-img-top" src="images/album_wp800.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h3 class="ahheader">Card title</h5>
-                        <p class="ahbodytext">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h3 class="ahheader">Bouncing off the Satellites</h3>
+                        <p class="ahbodytext">Ballad-driven, less upbeat fourth studio album was the last to include Ricky Wilson</p>
                         <a href="#" class="btn btn-primary">Listen</a>
-                        <p class="ahcardfooter">1980</p>
+                        <p class="ahcardfooter">1986</p>
                     </div>
             </div>                 
             <div class="card m-3" style="width: 18rem;">
                     <img class="card-img-top" src="images/album_wp800.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <h3 class="ahheader">Card title</h5>
-                            <p class="ahbodytext">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <h3 class="ahheader">Cosmic Thing</h3>
+                            <p class="ahbodytext">Comeback fifth studio platinum album includes the hits Roam and Love Shack</p>
                             <a href="#" class="btn btn-primary">Listen</a>
-                            <p class="ahcardfooter">1980</p>
+                            <p class="ahcardfooter">1989</p>
                         </div>
             </div>                  
              <div class="card m-3" style="width: 18rem;">
                     <img class="card-img-top" src="images/album_wp800.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <h3 class="ahheader">Card title</h5>
-                            <p class="ahbodytext">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <h3 class="ahheader">The Best of the B-52's / Dance this Mess Around</h3>
+                            <p class="ahbodytext">Compilation album of the band's best songs from the late-'70s and early-'80s</p>
                             <a href="#" class="btn btn-primary">Listen</a>
-                                <p class="ahcardfooter">1980</p>
+                                <p class="ahcardfooter">1990</p>
                         </div>
             </div>                   
         <div class="card m-3" style="width: 18rem;">
                 <img class="card-img-top" src="images/album_wp800.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h3 class="ahheader">Card title</h5>
-                        <p class="ahbodytext">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h3 class="ahheader">Party Mix! / Mesopotamia</h3>
+                        <p class="ahbodytext">Two-disk album with six hit remixes and six new songs produced by David Byrne</p>
                         <a href="#" class="btn btn-primary">Listen</a>
-                        <p class="ahcardfooter">1980</p>
+                        <p class="ahcardfooter">1991</p>
                     </div>
             </div>          
             <div class="card m-3" style="width: 18rem;">
                 <img class="card-img-top" src="images/album_wp800.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h3 class="ahheader">Card title</h5>
-                        <p class="ahbodytext">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h3 class="ahheader">Good Stuff</h3>
+                        <p class="ahbodytext">Grammy-nominated sixth studio gold album includes radio hit Good Stuff</p>
                         <a href="#" class="btn btn-primary">Listen</a>
-                        <p class="ahcardfooter">1980</p>
+                        <p class="ahcardfooter">1992</p>
                     </div>
             </div>          
             <div class="card m-3" style="width: 18rem;">
                     <img class="card-img-top" src="images/album_wp800.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <h3 class="ahheader">Card title</h5>
-                            <p class="ahbodytext">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <h3 class="ahheader">Time Capsule</h3>
+                            <p class="ahbodytext">Songs for a Future Generation compilation album includes sixteen greatest hits</p>
                             <a href="#" class="btn btn-primary">Listen</a>
-                            <p class="ahcardfooter">1980</p>
+                            <p class="ahcardfooter">1998</p>
                         </div>
             </div> 
             <div class="card m-3" style="width: 18rem;">
                 <img class="card-img-top" src="images/album_wp800.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h3 class="ahheader">Card title</h5>
-                        <p class="ahbodytext">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h3 class="ahheader">Nude on the Moon</h3>
+                        <p class="ahbodytext">The B-52's Anthology two-disk compilation album with 35 songs from 1979 to 1998</p>
                         <a href="#" class="btn btn-primary">Listen</a>
-                            <p class="ahcardfooter">1980</p>
+                            <p class="ahcardfooter">2002</p>
                     </div>
             </div>  
             <div class="card m-3" style="width: 18rem;">
                 <img class="card-img-top" src="images/album_wp800.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h3 class="ahheader">Card title</h5>
-                        <p class="ahbodytext">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h3 class="ahheader">Funplex</h3>
+                        <p class="ahbodytext">Seventh, and most recent, studio album of eleven new songs alongside bonus content</p>
                         <a href="#" class="btn btn-primary">Listen</a>
-                        <p class="ahcardfooter">1980</p>
+                        <p class="ahcardfooter">2008</p>
                     </div>
             </div>  
             <div class="card m-3" style="width: 18rem;">
                 <img class="card-img-top" src="images/album_wp800.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h3 class="ahheader">Card title</h5>
-                        <p class="ahbodytext">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h3 class="ahheader">With the Wild Crowd</h3>
+                        <p class="ahbodytext">First official live album (with DVD recording) of Athens, Georgia concert on February 18, 2011</p>
                         <a href="#" class="btn btn-primary">Listen</a>
-                            <p class="ahcardfooter">1980</p>
+                            <p class="ahcardfooter">2011</p>
                     </div>
             </div>  
             <div class="card m-3" style="width: 18rem;">
                 <img class="card-img-top" src="images/album_wp800.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h3 class="ahheader">Card title</h5>
-                        <p class="ahbodytext">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h3 class="ahheader">Live! 8-24-1979</h3>
+                        <p class="ahbodytext">Live recording of August 24, 1979 concert at The Berklee Center in Boston, Massachusetts</p>
                         <a href="#" class="btn btn-primary">Listen</a>
-                        <p class="ahcardfooter">1980</p>
+                        <p class="ahcardfooter">2015</p>
                     </div>
             </div>  
             <div class="card m-3" style="width: 18rem;">
                 <img class="card-img-top" src="images/album_wp800.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h3 class="ahheader">Card title</h5>
-                        <p class="ahbodytext">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h3 class="ahheader">West Park, Chicago, 1979</h3>
+                        <p class="ahbodytext">A bootleg live recording of the eleven-song Illinois concert on October 6, 1979</p>
                         <a href="#" class="btn btn-primary">Listen</a>
-                        <p class="ahcardfooter">1980</p>
+                        <p class="ahcardfooter">2015</p>
                     </div>
              </div> 
         </div>  
